<resources>
    <string name="app_name">FoodApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_field_text">Email</string>
    <string name="password_field_text">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="sign_up_btn_text">Sign Up</string>
    <string name="create_btn_txt">Create</string>
</resources>